--- a/main.css
+++ b/main.css
@@ -7,8 +7,8 @@
 }
 
 .testimonials-container {
-  font-family: "Poppins", sans-serif;
   min-height: 100vh;
+  font-family: "Poppins", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,77 +16,26 @@
   background: rgba(235, 235, 235, 0.5);
 }
 
-h2{
-  margin: .5rem; 
+h2 {
+  margin: 0.5rem;
   font-size: 2.2rem;
   font-weight: 400;
 }
 
 .testimonial {
-  border-top: 4px solid rgb(0, 184, 190);
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   height: 50vh;
   width: 80vw;
+  margin: 2rem;
+  padding: 45px 20px 20px;
+  background: #fff;
+  border-top: 4px solid rgb(0, 184, 190);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 2rem;
   border-radius: 5px;
-  padding: 45px 20px 20px;
-  animation: fade 2s
-}
-
-.testimonial img{
-  height: 2rem;
-  width: auto;
-  margin-bottom: 1.5rem;
-}
-
-.testimonial p {
-  overflow: auto;
-  font-size: 20px;
-  font-weight: 400;
-  font-style: oblique;
-  padding: 2px;
-}
-
-p span{
-  font-size: 17px;
-  font-style: normal;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #000000;
-  font-size: 15px;
-  opacity: 0.7;
-  margin-top: 1.5rem;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  display: inline-block;
-  text-align: center;
-  cursor: pointer;
-  padding: 0.5rem;
-  margin: 0.5rem;
-  color: rgb(0, 184, 190);
-  font-size: 1.5rem;
-  transition: .3s ease;
-  border-radius: 50%;
-  width: 3rem;
-  height: 3rem;
-  background: #fff;
-  box-shadow: 0 2px 4px 1px rgba(50,50,93,.1);
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  transform: translateY(-3px);
+  animation: fade 2s;
 }
 
 @keyframes fade {
@@ -96,4 +45,50 @@ p span{
   to {
     opacity: 1;
   }
+}
+
+.testimonial img {
+  height: 2rem;
+  width: auto;
+  margin-bottom: 1.5rem;
+}
+
+.testimonial p {
+  overflow: auto;
+  font-style: oblique;
+  font-size: 19px;
+  font-weight: 400;
+}
+
+p span {
+  font-size: 17px;
+  font-style: normal;
+}
+
+.numbertext {
+  font-size: 15px;
+  opacity: 0.7;
+  margin-top: 1.5rem;
+}
+
+.prev,
+.next {
+  display: inline-block;
+  background: #fff;
+  box-shadow: 0 2px 4px 1px rgba(50, 50, 93, 0.1);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  font-size: 1.5rem;
+  text-align: center;
+  color: rgb(0, 184, 190);
+  transition: 0.3s ease;
+}
+
+.prev:hover,
+.next:hover {
+  cursor: pointer;
+  transform: translateY(-4px);
 }
